# app/Http/Controllers/API/DroneController.php
@@ -18,23 +18,119 @@ use Validator;
 
  class DroneController extends Controller
  {
-     /** 
-      * @OA\Get(
-      *     path="/api/drone",
-      *     tags={"Drone"},
-      *     summary="Display a listing of the items",
-      *     operationId="index",
-      *     @OA\Response(
-      *         response=200,
-      *         description="successful",
-      *         @OA\JsonContent()
-      *     )
-      * )
-      */
-     public function index()
+    /** 
+     * @OA\Get(
+     *     path="/api/drone",
+     *     tags={"Drone"},
+     *     summary="Display a listing of the items",
+     *     operationId="index",
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful",
+     *         @OA\JsonContent()
+     *          )
+     *      ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_producer",
+     *         in="query",
+     *         description="search by producer like DJI, etc",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_sort_by",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="latest"
+     *         )
+     *     ),
+     * )
+     */
+     public function index(Request $request)
      {
-         return Drone::get();
-     }
+        try {
+            $data['filter']       = $request->all();
+            $page                 = $data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit                = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset               = ($page?($page-1)*$limit:0);
+            $data['products']     = Drone::whereRaw('1 = 1');
+            
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(drone_name) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_producer')){
+                $data['products'] = $data['products']->whereRaw('LOWER(producer) = "'.strtolower($request->get('_producer')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_production':
+                $data['products'] = $data['products']->orderBy('production_year','DESC');
+                break;
+                case 'latest_added':
+                $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;    
+                case 'name_asc':
+                $data['products'] = $data['products']->orderBy('drone_name','ASC');
+                break;
+                case 'name_desc':
+                $data['products'] = $data['products']->orderBy('drone_name','DESC');
+                break;
+                case 'price_asc':
+                $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+            }
+            $data['products_count_total']   = $data['products']->count();
+            $data['products']               = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']       = $data['products']->toSql();
+            $data['products']               = $data['products']->get();
+            $data['products_count_start']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']     = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+           return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }     }
  
      /**
       * @OA\Post(
@@ -59,6 +155,7 @@ use Validator;
       *             ref="#/components/schemas/Drone",
       *             example={"id": 1, "drone_name": "DJI Mavic 3 Pro", "price": 33000000, "producer" : "DJI", "production_year": "2023",
       *                      "description": "DJI Mavic 3 Pro is a triple-lens flagship camera drone with multiple focal lengths. Mavic 3 Pro has a 4/3 CMOS Hasselblad camera and dual tele cameras.",
+      *                      "cover": "https://sinarphoto.com/prd/l/dji-mavic-3-pro-drone-with-dji-rc-01.jpg",
       *                     }
       *         ),
       *     ),
@@ -80,7 +177,7 @@ use Validator;
              return $drone;
  
          } catch(\Exception $exception) {
-             throw new HttpException(400, "Invalid Data : {$exception->getMessage}");
+             throw new HttpException(400, "Invalid Data : {$exception->getMessage()}");
          }
      }
  
